# CRYPT7

currency-rs/: Cargo.toml
frontend/: index.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GenerateWallet.tsx  Navbar.tsx  WalletWizard.tsx  newUser.tsx
frontend/src/pages/: Explore.tsx  Home.tsx  Wallets.tsx  locked.tsx
frontend/src/utils/: db.ts  store.ts  wallet.ts  walletLocker.ts
wallet-rs/: Cargo.toml
wallet-rs/src/: decryption.rs  derivation.rs  encryption.rs  lib.rs
