[package]
name = "wallet-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.5"
bip39 = "2.2"
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.21"
ethers-signers = "2.0.14"
ethers-core = "2.0.14"



